--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 </head>
 <body>
 <div class="card">
-    <img src="./assets/images/illustration-article.svg" alt="Article image" class="main-image" />
+    <img src="illustration-article.svg" alt="Article image" class="main-image" />
     <div class="tag">Learning</div>
     <div class="date">Published 21 Dec 2023</div>
     <h3>HTML & CSS foundations</h3>
@@ -106,9 +106,10 @@
         These languages are the backbone of every website, defining structure, content, and presentation.
     </p>
     <div class="author">
-        <img src="./assets/images/image-avatar.webp" alt="Avatar image" />
+        <img src="image-avatar.webp" alt="Avatar image" />
         <span class="author-name">Greg Hooper</span>
     </div>
 </div>
 </body>
 </html>
+
