--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 </head>
 <body>
   <div class="card">
-    <img src="./assets/images/illustration-article.svg" alt="Article Image" class="main-image" />
+    <img src="illustration-article.svg" alt="Article Image" class="main-image" />
 
     <div class="info">
       <div class="tag">Learning</div>
@@ -110,9 +110,10 @@
     </div>
 
     <div class="author">
-      <img src="./assets/images/image-avatar.webp" alt="Author Avatar" />
+      <img src="image-avatar.jpg" alt="Author Avatar" />
       <span class="author-name">Greg Hooper</span>
     </div>
   </div>
 </body>
 </html>
+
